<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/pbProgress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@android:color/white"
        android:visibility="visible"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:focusedByDefault="true"
                android:padding="10dp"
                android:src="@drawable/ic_tab_home" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.1" />

            <ImageButton
                android:id="@+id/btnFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_tab_heart" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btnNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/notifications"
                    android:focusable="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_bell" />

                <TextView
                    android:id="@+id/tvNotificationBadge"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="top|end"
                    android:background="@drawable/notification_badge_background"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:visibility="gone"
                    tools:text="3"
                    tools:visibility="visible" />

            </FrameLayout>

            <ImageButton
                android:id="@+id/btnFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_tab_filter"
                android:contentDescription="@string/filter" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_tab_search" />

            <ImageButton
                android:id="@+id/btnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_tab_person"
                android:contentDescription="@string/account" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsMoviesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPagerMain"
                        android:layout_width="match_parent"
                        android:layout_height="320dp" />

                    <ProgressBar
                        android:id="@+id/pbProgressMostPopular"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminateTint="@android:color/white"
                        android:visibility="visible"
                        tools:visibility="gone" />
                    <LinearLayout
                        android:id="@+id/llSlideDots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tvContinueWatching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/continue_watching"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvContinueWatching"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_continue_watching"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvNewReleases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/new_releases"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNewReleases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:id="@+id/tvTopMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/top_movies"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:id="@+id/tvTopTvShows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/top_tv_shows"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopTvShows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/movies"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/tv_shows"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTvShows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/action"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/comedy"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvComedy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/drama"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDrama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/fantasy"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFantasy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/horror"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHorror"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/mystery"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMystery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/animation"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAnimation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/top_imdb"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopIMDB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager=".ui.sections.dashboard.manager.TVLinearLayoutManager"
                    tools:listitem="@layout/item_dashboard" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</FrameLayout>